--- a/Geo_demographic_data_analysis.ipynb
+++ b/Geo_demographic_data_analysis.ipynb
@@ -10442,7 +10442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -10451,7 +10451,7 @@
        "121"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10462,7 +10462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -10471,7 +10471,7 @@
        "<BarContainer object of 5 artists>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -10494,7 +10494,7 @@
     "plt.gca().set(xlabel = 'Age-Group', ylabel = 'No of Exits', Title = 'Age of exiting users')\n",
     "# plt.ylim(800, 1200)\n",
     "plt.xticks(ticks = [20,30,40,50,60], labels=['20-30', '30-40', '40-50', '50-60', '60+'])\n",
-    "plt.bar(x, y, color = 'Crimson', width = 8.0, align = 'center' )\n"
+    "plt.bar(x, y, color = 'Crimson', width = 8.0 )\n"
    ]
   },
   {
