--- a/Churn Model.ipynb
+++ b/Churn Model.ipynb
@@ -669,13 +669,7 @@
       "6400/6400 [==============================] - 1s 125us/step - loss: 0.4286 - acc: 0.8287 - val_loss: 0.4016 - val_acc: 0.8444\n",
       "Epoch 57/150\n",
       "6400/6400 [==============================] - 1s 108us/step - loss: 0.4273 - acc: 0.8281 - val_loss: 0.4019 - val_acc: 0.8456\n",
-      "Epoch 58/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/150\n",
       "6400/6400 [==============================] - 1s 92us/step - loss: 0.4298 - acc: 0.8281 - val_loss: 0.4024 - val_acc: 0.8462\n",
       "Epoch 59/150\n",
       "6400/6400 [==============================] - 1s 82us/step - loss: 0.4324 - acc: 0.8248 - val_loss: 0.4018 - val_acc: 0.8406\n",
@@ -4451,7 +4445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
