Saved the model

--- a/Churn Model.ipynb
+++ b/Churn Model.ipynb
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predicting Churn yusing an ANN "
+    "### Predicting Churn using an ANN "
    ]
   },
   {
@@ -4336,16 +4336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.009720947590694834"
+       "0.00605873392941718"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4370,7 +4370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4379,7 +4379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
